<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorBright"
            android:textSize="@dimen/titleSize"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/titleMargin"
            android:textStyle="bold"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectedDeviceText"
            android:textColor="@color/colorBright"
            android:textSize="@dimen/selectedDeviceSize"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/selectedMargin"
            android:textStyle="bold"
            android:id="@+id/tvSelectedDevice" />

        <Button
            android:id ="@+id/startBtn"
            android:layout_width="@dimen/startBtnSize"
            android:layout_height="@dimen/startBtnSize"
            android:textColor="@color/colorDark"
            android:text="@string/startBtnText"
            android:textSize="@dimen/startSize"
            android:background="@drawable/start_button_disabled"
            android:padding="15dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/deviceListBtn"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_button"
            android:text="@string/deviceList"
            android:textSize="@dimen/settingsSize"
            android:layout_marginLeft="@dimen/buttonMargin"
            android:layout_marginStart="@dimen/buttonMargin"
            android:layout_alignTop="@+id/settingsBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_button"
            android:text="@string/settings"
            android:textSize="@dimen/settingsSize"
            android:layout_marginTop="60dp"
            android:layout_marginRight="@dimen/buttonMargin"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:layout_below="@+id/startBtn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<ListView-->
            <!--android:id="@+id/deviceListLV"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorBright">-->
        <!--</ListView>-->
    <!--</RelativeLayout>-->

</RelativeLayout>
